# autonomous-system

./: .gitignore  README.md  mkdocs.yml
.devcontainer/: linux_extension.sh  project-words.txt  ros_entrypoint.sh
.devcontainer/cuda12.2/: .devcontainer.json
.devcontainer/cuda12.8/: devcontainer.json
.devcontainer/cuda12.9/: devcontainer.json
docker/: Dockerfile.cuda12.2  Dockerfile.cuda12.8  Dockerfile.cuda12.9  nano.Dockerfile
docs/: index.md
docs/development_and_standards/: cheatsheet.md  commits.md  contributing.md  forks.md  index.md
docs/guides/: index.md  update_fork.md
docs/guides/installation/: index.md  install_devcontainer.md  install_devcontainer_windows.md  install_local.md
docs/guides/ros2/: creating_a_ros2_package.md  index.md
docs/hardware/: index.md
docs/hardware/sensors/: index.md
docs/hardware/sensors/vn-300/: index.md
docs/onboarding/: autonomous_system.md  driverless_disciplines.md  formula_student.md  hardware.md  index.md
docs/onboarding/software/: docker.md  git.md  gitlab.md  index.md
docs/onboarding/software/ros2/: index.md  nodes.md  parameters.md  rosbag.md  services.md  setup.md  topics.md  turtlesim.md
docs/software/: autonomous_system_repo.md  forward_feedback.md  index.md
docs/stylesheets/: extra.css
docs/testing/: index.md  linting_and_formatting.md  unit_tests.md
install/: local_setup.sh  setup.sh
install/array_cone_detect/lib/array_cone_detect/: depth_node  detection_node  imu_viz_node  multi_node_main  pathfinding_node
install/array_cone_detect/share/array_cone_detect/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/depthai-ros/share/depthai-ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai_bridge/include/depthai_bridge/: BridgePublisher.hpp  DisparityConverter.hpp  ImageConverter.hpp  ImgDetectionConverter.hpp  ImuConverter.hpp  SpatialDetectionConverter.hpp  TFPublisher.hpp  TrackDetectionConverter.hpp  TrackSpatialDetectionConverter.hpp  TrackedFeaturesConverter.hpp  depthaiUtility.hpp
install/depthai_bridge/share/depthai_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/depthai_ros_driver/include/depthai_ros_driver/: camera.hpp  utils.hpp
install/depthai_ros_driver/lib/depthai_ros_driver/: obj_pub.py
install/depthai_ros_driver/share/depthai_ros_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  plugins.xml
install/depthai_ros_msgs/share/depthai_ros_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/descriptions/share/descriptions/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/oak_cone_detect_interfaces/share/oak_cone_detect_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/onnx_cone_detect/lib/onnx_cone_detect/: depth_node  detection_node  imu_viz_node  multi_node_main  pathfinding_node
log/: latest_build  latest_list
src/drivers/depthai-ros/: .gitignore
src/subsystems/array_cone_detect/: package.xml  setup.cfg  setup.py
src/subsystems/art_slam/: package.xml  setup.cfg  setup.py
src/subsystems/art_slam/art_slam/: art_slam_node.py
src/subsystems/art_slam/launch/: slam.launch.py
src/subsystems/art_slam/resource/: art_slam
src/subsystems/depth_tracking/: package.xml  setup.cfg  setup.py
src/subsystems/depth_tracking/depth_tracking/: depth_node.py
src/subsystems/descriptions/: CMakeLists.txt  package.xml
src/subsystems/ebs_active/: package.xml  setup.cfg  setup.py
src/subsystems/ebs_active/ebs_active/: ebs_active_node.py
src/subsystems/ebs_active/resource/: ebs_active
src/subsystems/imu_viz/: package.xml  setup.cfg  setup.py
src/subsystems/oak_cone_detect_interfaces/: CMakeLists.txt
src/subsystems/oak_cone_detect_interfaces/msg/: Cone3D.msg  ConeArray2D.msg  PathPrediction.msg
src/subsystems/onnx_cone_detect/: package.xml  setup.cfg  setup.py
src/subsystems/path_viz/: package.xml  setup.cfg  setup.py
src/subsystems/pathfinding/: package.xml  setup.cfg  setup.py
src/subsystems/pathfinding/pathfinding/: __init__.py  pathfinding_node.py  spline_utils.py
src/subsystems/pathfinding/test/: test_spline_path.py
src/subsystems/pytorch_cone_detect/: LICENSE  package.xml  setup.cfg  setup.py
src/subsystems/random_cone_detect/: package.xml  setup.cfg  setup.py
src/subsystems/random_cone_detect/launch/: detection_node.launch.py
src/subsystems/random_cone_detect/random_cone_detect/: detection_monitor_node.py  detection_node.py  idle_monitor_node.py  lap_counter_node.py  manual_control_node.py  map_output_node.py  multi_node_main.py  pathfinding_node.py  safety_watchdog_node.py  track_publisher.py  utils.py  watchdog_node.py
src/subsystems/random_cone_detect/resource/: cone_set2.json
src/subsystems/random_cone_detect/tracks/: FSE23.yaml  FSE24.yaml  FSG23.yaml  FSG24.yaml  FSS22_V1.yaml  FSS22_V2.yaml  acceleration.yaml  skidpad.yaml
src/subsystems/sort_tracking/: package.xml  setup.cfg  setup.py
src/subsystems/sort_tracking/resource/: sort_tracking
src/subsystems/sort_tracking/sort_tracking/: __init__.py  sort.py
src/subsystems/tensorrt_cone_detect/: package.xml  setup.cfg  setup.py
src/subsystems/tensorrt_cone_detect_cpp/: CMakeLists.txt  package.xml
src/subsystems/tensorrt_cone_detect_cpp/launch/: detection_node.launch.py
src/subsystems/tensorrt_cone_detect_cpp/src/: detection_node.cpp  multi_node_main.py  safety_watchdog_node.py  watchdog_node.py
src/subsystems/vehicle_control/: package.xml  setup.cfg  setup.py
src/subsystems/vehicle_control/vehicle_control/: car_state_node.py  control_main.py  forward_feedback.py  mapping_node.py  slam_node.py  speed_control_node.py  stanley_pid_controller.py  vehicle_controll_node.py
(+577 files in other folders)
