<?xml version="1.0"?>
<package format="3">
  <name>art_slam</name>
  <version>0.0.1</version>
  <description>Example SLAM node for cone mapping and path storage.</description>
  <maintainer email="nicolas.mueller@strohmleitung.de">Nicolas Müller</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>python3-numpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>oak_cone_detect_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
