<?xml version="1.0"?>
<package format="3">
  <name>depth_tracking</name>
  <version>0.0.1</version>
  <description>Standalone depth tracking node</description>
  <maintainer email="nicolas.mueller@strohmleitung.de">Nicolas Müller</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>oak_cone_detect_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>filterpy</depend>
  <depend>numpy</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
