<?xml version="1.0"?>
<package format="3">
  <name>ebs_active</name>
  <version>0.0.1</version>
  <description>Simple EBS activation node publishing an active flag.</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
