<?xml version="1.0"?>
<package format="3">
  <name>random_cone_detect</name>
  <version>0.0.1</version>
  <description>OAK-D basierte Kegelerkennung (Python Nodes)</description>
  <maintainer email="nicolas.mueller@strohmleitung.de">Nicolas Müller</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>depthai_ros_driver</depend>
  <depend>std_msgs</depend>
  <depend>oak_cone_detect_interfaces</depend>
  <depend>pathfinding</depend>
  <depend>art_slam</depend>
  <depend>imu_viz</depend>
  <depend>ebs_active</depend>
  <depend>pynput</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
