<?xml version="1.0"?>
<package format="2">
  <name>sort_tracking</name>
  <version>0.0.1</version>
  <description>Simple Online and Realtime Tracking utilities</description>
  <maintainer email="noreply@example.com">AutoBot</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>filterpy</exec_depend>
</package>
