<?xml version="1.0"?>
<package format="3">
  <name>vehicle_control</name>
  <version>0.0.1</version>
  <description>Simple vehicle control skeleton with car state and mapping</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
